# noire

./: README.md  pyproject.toml
data/: notes.json
src/: main.py
src/commands/: __init__.py  add.py  list.py  update.py
src/const/: commands.py
src/databases/: note_repository.py
src/models/: note.py
