[project]
name = "noir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "pydantic>=2.11.5",
    "rich>=14.0.0",
    "tinydb>=4.8.2",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "isort>=5.12.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
mypy_path = "src"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "pytest>=8.3.5",
]

[project.scripts]
noir = "src.main:app"
